// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test one side relationship schema query type generation 1`] = `
"input IDInput {
  ne: ID
  eq: ID
  le: ID
  lt: ID
  ge: ID
  gt: ID
  in: [ID]
}

\\"\\"\\" @model \\"\\"\\"
type Note {
  id: ID!
  title: String!
  description: String!

  \\"\\"\\"@oneToMany field: 'note', key: 'test_id'\\"\\"\\"
  tests(filter: TestFilter): [Test]!
}

input NoteFilter {
  id: IDInput
  title: StringInput
  description: StringInput
  and: [NoteFilter]
  or: [NoteFilter]
  not: NoteFilter
}

type NoteResultList {
  items: [Note]!
  offset: Int
  limit: Int
  count: Int
}

input OrderByInput {
  field: String!
  order: SortDirectionEnum = ASC
}

input PageRequest {
  limit: Int
  offset: Int
}

type Query {
  getNote(id: ID!): Note
  findNotes(filter: NoteFilter, page: PageRequest, orderBy: OrderByInput): NoteResultList!
  getTest(id: ID!): Test
  findTests(filter: TestFilter, page: PageRequest, orderBy: OrderByInput): TestResultList!
}

enum SortDirectionEnum {
  DESC
  ASC
}

input StringInput {
  ne: String
  eq: String
  le: String
  lt: String
  ge: String
  gt: String
  in: [String]
  contains: String
  startsWith: String
  endsWith: String
}

\\"\\"\\"@model\\"\\"\\"
type Test {
  id: ID!
  name: String

  \\"\\"\\"@manyToOne field: 'tests', key: 'test_id'\\"\\"\\"
  note: Note
}

input TestFilter {
  id: IDInput
  name: StringInput
  test_id: IDInput
  and: [TestFilter]
  or: [TestFilter]
  not: TestFilter
}

type TestResultList {
  items: [Test]!
  offset: Int
  limit: Int
  count: Int
}
"
`;

exports[`Test snapshot config gql 1`] = `
"directive @test(description: String) on FIELD_DEFINITION | ENUM_VALUE

\\"\\"\\" @model \\"\\"\\"
type Comment {
  id: ID!
  title: String!
  description: String!

  \\"\\"\\"@manyToOne field: 'comments', key: 'note_id'\\"\\"\\"
  noteComment: Note!
}

input CommentFilter {
  id: IDInput
  title: StringInput
  description: StringInput
  note_id: IDInput
  and: [CommentFilter]
  or: [CommentFilter]
  not: CommentFilter
}

type CommentResultList {
  items: [Comment]!
  offset: Int
  limit: Int
  count: Int
}

input CommentSubscriptionFilter {
  id: ID
  title: String
  description: String
}

input CreateCommentInput {
  id: ID
  title: String!
  description: String!
  note_id: ID!
}

input CreateIssueInput {
  id: ID
  category: IssueCategory
  createdAt: DateTime
}

input CreateNoteInput {
  id: ID
  title: String!
  description: String!
  test_id: ID
}

input CreateTestInput {
  id: ID
  name: String
}

type CustomType {
  issue1432: String
}

scalar DateTime

input DateTimeInput {
  ne: DateTime
  eq: DateTime
  le: DateTime
  lt: DateTime
  ge: DateTime
  gt: DateTime
  in: [DateTime]
  between: [DateTime]
}

input IDInput {
  ne: ID
  eq: ID
  le: ID
  lt: ID
  ge: ID
  gt: ID
  in: [ID]
}

\\"\\"\\"
Model added to test schema generation using enum. 
See issue https://github.com/aerogear/graphback/issues/1299

@model
\\"\\"\\"
type Issue {
  id: ID!
  category: IssueCategory
  createdAt: DateTime

  \\"\\"\\"
  Field with custom type added as a fix for https://github.com/aerogear/graphback/issues/1432
  This shows that a custom type can be added without breaking Graphback schema generation
  \\"\\"\\"
  custom: CustomType
}

enum IssueCategory {
  BUG
  QUESTION
  FEATURE_REQUEST
}

input IssueFilter {
  id: IDInput
  category: StringInput
  createdAt: DateTimeInput
  and: [IssueFilter]
  or: [IssueFilter]
  not: IssueFilter
}

type IssueResultList {
  items: [Issue]!
  offset: Int
  limit: Int
  count: Int
}

input IssueSubscriptionFilter {
  id: ID
  category: IssueCategory
  createdAt: DateTime
}

input MutateCommentInput {
  id: ID!
  title: String
  description: String
  note_id: ID
}

input MutateIssueInput {
  id: ID!
  category: IssueCategory
  createdAt: DateTime
}

input MutateNoteInput {
  id: ID!
  title: String
  description: String
  test_id: ID
}

input MutateTestInput {
  id: ID!
  name: String
}

type Mutation {
  likeNote(id: ID!): Note!
  createNote(input: CreateNoteInput!): Note!
  updateNote(input: MutateNoteInput!): Note!
  deleteNote(input: MutateNoteInput!): Note!
  createComment(input: CreateCommentInput!): Comment!
  updateComment(input: MutateCommentInput!): Comment!
  deleteComment(input: MutateCommentInput!): Comment!
  createTest(input: CreateTestInput!): Test!
  updateTest(input: MutateTestInput!): Test!
  deleteTest(input: MutateTestInput!): Test!
  createIssue(input: CreateIssueInput!): Issue!
  updateIssue(input: MutateIssueInput!): Issue!
  deleteIssue(input: MutateIssueInput!): Issue!
}

\\"\\"\\" @model \\"\\"\\"
type Note {
  id: ID!
  title: String! @test(description: \\"mock directive\\")
  description: String!

  \\"\\"\\"@oneToMany field: 'noteComment', key: 'note_id'\\"\\"\\"
  comments(filter: CommentFilter): [Comment]!

  \\"\\"\\"@oneToOne key: 'test_id'\\"\\"\\"
  test: Test
}

input NoteFilter {
  id: IDInput
  title: StringInput
  description: StringInput
  test_id: IDInput
  and: [NoteFilter]
  or: [NoteFilter]
  not: NoteFilter
}

type NoteResultList {
  items: [Note]!
  offset: Int
  limit: Int
  count: Int
}

input NoteSubscriptionFilter {
  id: ID
  title: String
  description: String
}

input OrderByInput {
  field: String!
  order: SortDirectionEnum = ASC
}

input PageRequest {
  limit: Int
  offset: Int
}

type Query {
  getLikedNotes(id: ID!, names: [String]!): Note!
  getNote(id: ID!): Note
  findNotes(filter: NoteFilter, page: PageRequest, orderBy: OrderByInput): NoteResultList!
  getComment(id: ID!): Comment
  findComments(filter: CommentFilter, page: PageRequest, orderBy: OrderByInput): CommentResultList!
  getTest(id: ID!): Test
  findTests(filter: TestFilter, page: PageRequest, orderBy: OrderByInput): TestResultList!
  getIssue(id: ID!): Issue
  findIssues(filter: IssueFilter, page: PageRequest, orderBy: OrderByInput): IssueResultList!
}

enum SortDirectionEnum {
  DESC
  ASC
}

input StringInput {
  ne: String
  eq: String
  le: String
  lt: String
  ge: String
  gt: String
  in: [String]
  contains: String
  startsWith: String
  endsWith: String
}

type Subscription {
  newNote(filter: NoteSubscriptionFilter): Note!
  updatedNote(filter: NoteSubscriptionFilter): Note!
  deletedNote(filter: NoteSubscriptionFilter): Note!
  newComment(filter: CommentSubscriptionFilter): Comment!
  updatedComment(filter: CommentSubscriptionFilter): Comment!
  deletedComment(filter: CommentSubscriptionFilter): Comment!
  newTest(filter: TestSubscriptionFilter): Test!
  updatedTest(filter: TestSubscriptionFilter): Test!
  deletedTest(filter: TestSubscriptionFilter): Test!
  newIssue(filter: IssueSubscriptionFilter): Issue!
  updatedIssue(filter: IssueSubscriptionFilter): Issue!
  deletedIssue(filter: IssueSubscriptionFilter): Issue!
}

\\"\\"\\"@model\\"\\"\\"
type Test {
  id: ID!
  name: String
}

input TestFilter {
  id: IDInput
  name: StringInput
  and: [TestFilter]
  or: [TestFilter]
  not: TestFilter
}

type TestResultList {
  items: [Test]!
  offset: Int
  limit: Int
  count: Int
}

input TestSubscriptionFilter {
  id: ID
  name: String
}"
`;

exports[`Test snapshot config js 1`] = `
"directive @test(description: String) on FIELD_DEFINITION | ENUM_VALUE

\\"\\"\\" @model \\"\\"\\"
type Comment {
  id: ID!
  title: String!
  description: String!

  \\"\\"\\"@manyToOne field: 'comments', key: 'note_id'\\"\\"\\"
  noteComment: Note!
}

input CommentFilter {
  id: IDInput
  title: StringInput
  description: StringInput
  note_id: IDInput
  and: [CommentFilter]
  or: [CommentFilter]
  not: CommentFilter
}

type CommentResultList {
  items: [Comment]!
  offset: Int
  limit: Int
  count: Int
}

input CommentSubscriptionFilter {
  id: ID
  title: String
  description: String
}

input CreateCommentInput {
  id: ID
  title: String!
  description: String!
  note_id: ID!
}

input CreateIssueInput {
  id: ID
  category: IssueCategory
  createdAt: DateTime
}

input CreateNoteInput {
  id: ID
  title: String!
  description: String!
  test_id: ID
}

input CreateTestInput {
  id: ID
  name: String
}

type CustomType {
  issue1432: String
}

scalar DateTime

input DateTimeInput {
  ne: DateTime
  eq: DateTime
  le: DateTime
  lt: DateTime
  ge: DateTime
  gt: DateTime
  in: [DateTime]
  between: [DateTime]
}

input IDInput {
  ne: ID
  eq: ID
  le: ID
  lt: ID
  ge: ID
  gt: ID
  in: [ID]
}

\\"\\"\\"
Model added to test schema generation using enum. 
See issue https://github.com/aerogear/graphback/issues/1299

@model
\\"\\"\\"
type Issue {
  id: ID!
  category: IssueCategory
  createdAt: DateTime

  \\"\\"\\"
  Field with custom type added as a fix for https://github.com/aerogear/graphback/issues/1432
  This shows that a custom type can be added without breaking Graphback schema generation
  \\"\\"\\"
  custom: CustomType
}

enum IssueCategory {
  BUG
  QUESTION
  FEATURE_REQUEST
}

input IssueFilter {
  id: IDInput
  category: StringInput
  createdAt: DateTimeInput
  and: [IssueFilter]
  or: [IssueFilter]
  not: IssueFilter
}

type IssueResultList {
  items: [Issue]!
  offset: Int
  limit: Int
  count: Int
}

input IssueSubscriptionFilter {
  id: ID
  category: IssueCategory
  createdAt: DateTime
}

input MutateCommentInput {
  id: ID!
  title: String
  description: String
  note_id: ID
}

input MutateIssueInput {
  id: ID!
  category: IssueCategory
  createdAt: DateTime
}

input MutateNoteInput {
  id: ID!
  title: String
  description: String
  test_id: ID
}

input MutateTestInput {
  id: ID!
  name: String
}

type Mutation {
  likeNote(id: ID!): Note!
  createNote(input: CreateNoteInput!): Note!
  updateNote(input: MutateNoteInput!): Note!
  deleteNote(input: MutateNoteInput!): Note!
  createComment(input: CreateCommentInput!): Comment!
  updateComment(input: MutateCommentInput!): Comment!
  deleteComment(input: MutateCommentInput!): Comment!
  createTest(input: CreateTestInput!): Test!
  updateTest(input: MutateTestInput!): Test!
  deleteTest(input: MutateTestInput!): Test!
  createIssue(input: CreateIssueInput!): Issue!
  updateIssue(input: MutateIssueInput!): Issue!
  deleteIssue(input: MutateIssueInput!): Issue!
}

\\"\\"\\" @model \\"\\"\\"
type Note {
  id: ID!
  title: String!
  description: String!

  \\"\\"\\"@oneToMany field: 'noteComment', key: 'note_id'\\"\\"\\"
  comments(filter: CommentFilter): [Comment]!

  \\"\\"\\"@oneToOne key: 'test_id'\\"\\"\\"
  test: Test
}

input NoteFilter {
  id: IDInput
  title: StringInput
  description: StringInput
  test_id: IDInput
  and: [NoteFilter]
  or: [NoteFilter]
  not: NoteFilter
}

type NoteResultList {
  items: [Note]!
  offset: Int
  limit: Int
  count: Int
}

input NoteSubscriptionFilter {
  id: ID
  title: String
  description: String
}

input OrderByInput {
  field: String!
  order: SortDirectionEnum = ASC
}

input PageRequest {
  limit: Int
  offset: Int
}

type Query {
  getLikedNotes(id: ID!, names: [String]!): Note!
  getNote(id: ID!): Note
  findNotes(filter: NoteFilter, page: PageRequest, orderBy: OrderByInput): NoteResultList!
  getComment(id: ID!): Comment
  findComments(filter: CommentFilter, page: PageRequest, orderBy: OrderByInput): CommentResultList!
  getTest(id: ID!): Test
  findTests(filter: TestFilter, page: PageRequest, orderBy: OrderByInput): TestResultList!
  getIssue(id: ID!): Issue
  findIssues(filter: IssueFilter, page: PageRequest, orderBy: OrderByInput): IssueResultList!
}

enum SortDirectionEnum {
  DESC
  ASC
}

input StringInput {
  ne: String
  eq: String
  le: String
  lt: String
  ge: String
  gt: String
  in: [String]
  contains: String
  startsWith: String
  endsWith: String
}

type Subscription {
  newNote(filter: NoteSubscriptionFilter): Note!
  updatedNote(filter: NoteSubscriptionFilter): Note!
  deletedNote(filter: NoteSubscriptionFilter): Note!
  newComment(filter: CommentSubscriptionFilter): Comment!
  updatedComment(filter: CommentSubscriptionFilter): Comment!
  deletedComment(filter: CommentSubscriptionFilter): Comment!
  newTest(filter: TestSubscriptionFilter): Test!
  updatedTest(filter: TestSubscriptionFilter): Test!
  deletedTest(filter: TestSubscriptionFilter): Test!
  newIssue(filter: IssueSubscriptionFilter): Issue!
  updatedIssue(filter: IssueSubscriptionFilter): Issue!
  deletedIssue(filter: IssueSubscriptionFilter): Issue!
}

\\"\\"\\"@model\\"\\"\\"
type Test {
  id: ID!
  name: String
}

input TestFilter {
  id: IDInput
  name: StringInput
  and: [TestFilter]
  or: [TestFilter]
  not: TestFilter
}

type TestResultList {
  items: [Test]!
  offset: Int
  limit: Int
  count: Int
}

input TestSubscriptionFilter {
  id: ID
  name: String
}
"
`;

exports[`Test snapshot config ts 1`] = `
"directive @test(description: String) on FIELD_DEFINITION | ENUM_VALUE

\\"\\"\\" @model \\"\\"\\"
type Comment {
  id: ID!
  title: String!
  description: String!

  \\"\\"\\"@manyToOne field: 'comments', key: 'note_id'\\"\\"\\"
  noteComment: Note!
}

input CommentFilter {
  id: IDInput
  title: StringInput
  description: StringInput
  note_id: IDInput
  and: [CommentFilter]
  or: [CommentFilter]
  not: CommentFilter
}

type CommentResultList {
  items: [Comment]!
  offset: Int
  limit: Int
  count: Int
}

input CommentSubscriptionFilter {
  id: ID
  title: String
  description: String
}

input CreateCommentInput {
  id: ID
  title: String!
  description: String!
  note_id: ID!
}

input CreateIssueInput {
  id: ID
  category: IssueCategory
  createdAt: DateTime
}

input CreateNoteInput {
  id: ID
  title: String!
  description: String!
  test_id: ID
}

input CreateTestInput {
  id: ID
  name: String
}

type CustomType {
  issue1432: String
}

scalar DateTime

input DateTimeInput {
  ne: DateTime
  eq: DateTime
  le: DateTime
  lt: DateTime
  ge: DateTime
  gt: DateTime
  in: [DateTime]
  between: [DateTime]
}

input IDInput {
  ne: ID
  eq: ID
  le: ID
  lt: ID
  ge: ID
  gt: ID
  in: [ID]
}

\\"\\"\\"
Model added to test schema generation using enum. 
See issue https://github.com/aerogear/graphback/issues/1299

@model
\\"\\"\\"
type Issue {
  id: ID!
  category: IssueCategory
  createdAt: DateTime

  \\"\\"\\"
  Field with custom type added as a fix for https://github.com/aerogear/graphback/issues/1432
  This shows that a custom type can be added without breaking Graphback schema generation
  \\"\\"\\"
  custom: CustomType
}

enum IssueCategory {
  BUG
  QUESTION
  FEATURE_REQUEST
}

input IssueFilter {
  id: IDInput
  category: StringInput
  createdAt: DateTimeInput
  and: [IssueFilter]
  or: [IssueFilter]
  not: IssueFilter
}

type IssueResultList {
  items: [Issue]!
  offset: Int
  limit: Int
  count: Int
}

input IssueSubscriptionFilter {
  id: ID
  category: IssueCategory
  createdAt: DateTime
}

input MutateCommentInput {
  id: ID!
  title: String
  description: String
  note_id: ID
}

input MutateIssueInput {
  id: ID!
  category: IssueCategory
  createdAt: DateTime
}

input MutateNoteInput {
  id: ID!
  title: String
  description: String
  test_id: ID
}

input MutateTestInput {
  id: ID!
  name: String
}

type Mutation {
  likeNote(id: ID!): Note!
  createNote(input: CreateNoteInput!): Note!
  updateNote(input: MutateNoteInput!): Note!
  deleteNote(input: MutateNoteInput!): Note!
  createComment(input: CreateCommentInput!): Comment!
  updateComment(input: MutateCommentInput!): Comment!
  deleteComment(input: MutateCommentInput!): Comment!
  createTest(input: CreateTestInput!): Test!
  updateTest(input: MutateTestInput!): Test!
  deleteTest(input: MutateTestInput!): Test!
  createIssue(input: CreateIssueInput!): Issue!
  updateIssue(input: MutateIssueInput!): Issue!
  deleteIssue(input: MutateIssueInput!): Issue!
}

\\"\\"\\" @model \\"\\"\\"
type Note {
  id: ID!
  title: String!
  description: String!

  \\"\\"\\"@oneToMany field: 'noteComment', key: 'note_id'\\"\\"\\"
  comments(filter: CommentFilter): [Comment]!

  \\"\\"\\"@oneToOne key: 'test_id'\\"\\"\\"
  test: Test
}

input NoteFilter {
  id: IDInput
  title: StringInput
  description: StringInput
  test_id: IDInput
  and: [NoteFilter]
  or: [NoteFilter]
  not: NoteFilter
}

type NoteResultList {
  items: [Note]!
  offset: Int
  limit: Int
  count: Int
}

input NoteSubscriptionFilter {
  id: ID
  title: String
  description: String
}

input OrderByInput {
  field: String!
  order: SortDirectionEnum = ASC
}

input PageRequest {
  limit: Int
  offset: Int
}

type Query {
  getLikedNotes(id: ID!, names: [String]!): Note!
  getNote(id: ID!): Note
  findNotes(filter: NoteFilter, page: PageRequest, orderBy: OrderByInput): NoteResultList!
  getComment(id: ID!): Comment
  findComments(filter: CommentFilter, page: PageRequest, orderBy: OrderByInput): CommentResultList!
  getTest(id: ID!): Test
  findTests(filter: TestFilter, page: PageRequest, orderBy: OrderByInput): TestResultList!
  getIssue(id: ID!): Issue
  findIssues(filter: IssueFilter, page: PageRequest, orderBy: OrderByInput): IssueResultList!
}

enum SortDirectionEnum {
  DESC
  ASC
}

input StringInput {
  ne: String
  eq: String
  le: String
  lt: String
  ge: String
  gt: String
  in: [String]
  contains: String
  startsWith: String
  endsWith: String
}

type Subscription {
  newNote(filter: NoteSubscriptionFilter): Note!
  updatedNote(filter: NoteSubscriptionFilter): Note!
  deletedNote(filter: NoteSubscriptionFilter): Note!
  newComment(filter: CommentSubscriptionFilter): Comment!
  updatedComment(filter: CommentSubscriptionFilter): Comment!
  deletedComment(filter: CommentSubscriptionFilter): Comment!
  newTest(filter: TestSubscriptionFilter): Test!
  updatedTest(filter: TestSubscriptionFilter): Test!
  deletedTest(filter: TestSubscriptionFilter): Test!
  newIssue(filter: IssueSubscriptionFilter): Issue!
  updatedIssue(filter: IssueSubscriptionFilter): Issue!
  deletedIssue(filter: IssueSubscriptionFilter): Issue!
}

\\"\\"\\"@model\\"\\"\\"
type Test {
  id: ID!
  name: String
}

input TestFilter {
  id: IDInput
  name: StringInput
  and: [TestFilter]
  or: [TestFilter]
  not: TestFilter
}

type TestResultList {
  items: [Test]!
  offset: Int
  limit: Int
  count: Int
}

input TestSubscriptionFilter {
  id: ID
  name: String
}
"
`;
